--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "demo": "yarn demo:docs && yarn demo:stackblitzes && yarn demo:serve",
     "demo:ie": "yarn demo -c ie",
     "ssr": "yarn ssr-app:lint && yarn ssr-app:build && yarn ssr-app:e2e",
+    "assistive-playwright": "concurrently --success first --kill-others \"yarn e2e-app:serve --prod --no-watch --disableHostCheck --host 0.0.0.0\" \"yarn assistive-playwright:test\"",
+    "assistive-playwright:test": "wait-on http://localhost:4200 && ts-node --project e2e-app/tsconfig.spec.json node_modules/jasmine/bin/jasmine --config=e2e-app/jasmine-apw.json",
     "changelog": "conventional-changelog --preset angular --infile CHANGELOG.md --same-file --release-count 1",
     "changelog:patch": "git add CHANGELOG.md && git commit --amend --no-edit && git tag -f $npm_package_version",
     "check-format": "ts-node --project misc/tsconfig.json misc/check-format.ts",
@@ -99,6 +101,7 @@
     "@types/marked": "^1.1.0",
     "@types/node": "^12.11.1",
     "@types/prismjs": "1.16.2",
+    "assistive-playwright-client": "0.0.2",
     "bootstrap": "4.5.3",
     "clang-format": "1.0.35",
     "concurrently": "^5.3.0",
